3 trouble with been

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,14 @@ indexing-settings:
   testQq: 7
   deepLimit : 2 #глубина поиска подстраниц/ уровень главной страницы=1
   sites:
-    - url: https://www.lenta.ru
-      name: Лента.ру
+#    - url: https://www.lenta.ru
+#      name: Лента.ру
     - url: https://www.skillbox.ru
       name: Skillbox
-    - url: https://www.playback.ru
-      name: PlayBack.Ru
+#    - url: https://www.playback.ru
+#      name: PlayBack.Ru
+    - url: https://mail.ru/
+      name: mailRu
 
 server:
   port: 8085
