3 trouble with been

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,23 @@
-# example values
+
 
 indexing-settings:
-  testQq: 7
-  deepLimit : 2 #глубина поиска подстраниц/ уровень главной страницы=1
+  deepLimit: 2 #глубина поиска подстраниц/ уровень главной страницы=1
+  offset: 10 #размер порциирезультатов поиска
+  limit: 50 #макс кол результатов поиска которые нужно вывести
+  userAgent: Mozilla/5.0 (Windows; U; WindowsNT 5.1; en-US; rv1.8.1.6) Gecko/20070725 Firefox/2.0.0.6
+  referer: http://www.google.
+  responseWait : 3000 #ожидание ответа в мс
+  timeout: 1000 #таймаут между обращениями к сайт
+  readSubDomain: true #обрабатывать ли поддомены
   sites:
 #    - url: https://www.lenta.ru
 #      name: Лента.ру
-    - url: https://www.skillbox.ru
-      name: Skillbox
-#    - url: https://www.playback.ru
-#      name: PlayBack.Ru
-    - url: https://mail.ru/
-      name: mailRu
+#    - url: https://www.skillbox.ru
+#      name: Skillbox
+    - url: https://www.playback.ru
+      name: PlayBack.Ru
+#    - url: https://mail.ru/
+#      name: mailRu
 
 server:
   port: 8085
