1 рабочий вариант. (без редиса)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 
 
 indexing-settings:
-  maxFrequency: 1000 #макс кол страниц с данной леммой (отсев самых частых)
+  maxFrequency: 25 #макс кол страниц с данной леммой (отсев самых частых)
   deepLimit: 2 #глубина поиска подстраниц/ уровень главной страницы=1, без ограничений=0
-  offset: 10 #размер порциирезультатов поиска
-  limit: 50 #макс кол результатов поиска которые нужно вывести
+#  offset: 10 #размер порциирезультатов поиска
+#  limit: 50 #макс кол результатов поиска которые нужно вывести
   userAgent: LocalSearchBot #Mozilla/5.0 (Windows; U; WindowsNT 5.1; en-US; rv1.8.1.6) Gecko/20070725 Firefox/2.0.0.6
   referer: http://www.google.
   responseWait : 10000 #ожидание ответа в мс
   timeout: 1000 #таймаут между обращениями к сайт
-  readSubDomain: false #обрабатывать ли поддомены //ЭТО ВООБЩЕ НЕЛЬЗЯ, НЕ УКЛАДЫВАЕТСЯ В ЗАДВНИЕ, поэтому пофиксить и убрать этот переключатель нафиг
+#  readSubDomain: false #обрабатывать ли поддомены //ЭТО ВООБЩЕ НЕЛЬЗЯ, НЕ УКЛАДЫВАЕТСЯ В ЗАДВНИЕ, поэтому пофиксить и убрать этот переключатель нафиг
   sites:
 #    - url: https://www.lenta.ru
 #      name: Лента.ру
